VERSION: v1.1.4

NEW

IMPROVED
• Log endpoint removed

FIXED